// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulateLap (characterization) > produces a stable final classification, including retirements, for a seeded race 1`] = `
[
  {
    "condition": 3,
    "driverId": "d3",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1251.078,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d5",
    "gap": 20.637,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1271.715,
    "tyre": "soft",
  },
  {
    "condition": 79,
    "driverId": "d4",
    "gap": 4.457,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1276.173,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d6",
    "gap": 1.888,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 4,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1278.061,
    "tyre": "soft",
  },
  {
    "condition": 83,
    "driverId": "d1",
    "gap": 0,
    "laps": 1,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 2,
    "stints": 0,
    "totalTime": 100.616,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;

exports[`simulateLap (characterization) > records a god-mode forced retirement and classifies the car out of the running 1`] = `
[
  {
    "condition": 19,
    "driverId": "d4",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1249.736,
    "tyre": "medium",
  },
  {
    "condition": 1,
    "driverId": "d5",
    "gap": 12.244,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1261.98,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d6",
    "gap": 18.289,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1280.27,
    "tyre": "soft",
  },
  {
    "condition": 36,
    "driverId": "d3",
    "gap": 0,
    "laps": 4,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 4,
    "retired": true,
    "retirementLap": 5,
    "stints": 0,
    "totalTime": 409.414,
    "tyre": "medium",
  },
  {
    "condition": 83,
    "driverId": "d1",
    "gap": 0,
    "laps": 1,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 2,
    "stints": 0,
    "totalTime": 100.616,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;
